# desktop-pet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SESSION_NOTES.md  desktop-pet-design.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/pet/: mod.rs
src-tauri/src/platform/: mac.rs  mod.rs  windows.rs
src/debug/: DebugPanel.tsx
src/lib/: tauri.ts
src/onboarding/: EnvironmentSelect.tsx  LearnMore.tsx  OnboardingFlow.tsx  StartScreen.tsx
src/pet/: PetView.tsx  types.ts
src/productivity/: FocusTimer.tsx  ProductivityPanel.tsx  TodoList.tsx  types.ts
src/styles/: global.css  onboarding.css  pet.css  productivity.css
